Booking cancelation method developed and authentication failed message added
